--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,5 +47,4 @@ jobs:
           files: |
             build/*
             LICENSE
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
