Update GitHub Actions release workflow
- Modify tag pattern to follow semantic versioning more strictly by requiring `v*.*.*` instead of just `v*`.
- Replace the environment variable `GITHUB_TOKEN` with `CUSTOM_GITHUB_TOKEN` for improved security and customization.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "v*"
+      - "v*.*.*"
 
 jobs:
   build-and-release:
@@ -47,5 +47,4 @@ jobs:
           files: |
             build/*
             LICENSE
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
